fix: correct grid-gap size

--- a/css-activity8/styles.css
+++ b/css-activity8/styles.css
@@ -6,7 +6,7 @@
 
 .container {
   display: grid;
-  grid-gap: 1rem;
+  grid-gap: 20px;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
 }
